--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          poetry install --no-root  # installs all dependencies from poetry.lock
+          poetry install  # installs all dependencies from poetry.lock
 
       - name: Run tests
         run: |
