--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           poetry install  # installs all dependencies from poetry.lock
 
+      # ignore e2e tests so data isn't hosted on git
       - name: Run tests
         run: |
-          poetry run pytest -v
+          poetry run pytest tests/unit_tests/
