--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,7 @@ dependencies = [
     "pytest >=9.0.2,<10.0.0",
     "scikit-learn >=1.8.0,<2.0.0",
     "pandas >=2.3.3,<3.0.0",
-    "requests >=2.32.5,<3.0.0",
-    "sentence-transformers (>=5.2.0,<6.0.0)",
-    "faiss-cpu (>=1.13.2,<2.0.0)"
+    "requests >=2.32.5,<3.0.0",   
 ]
 
 [build-system]
@@ -22,3 +20,7 @@ build-backend = "poetry.core.masonry.api"
 
 [[tool.poetry.packages]]
 include = "media_rs"
+
+[tool.poetry.group.training.dependencies]
+sentence-transformers = ">=5.2.0,<6.0.0"
+faiss-cpu = ">=1.13.2,<2.0.0"
