--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,14 @@ authors = [
     {name = "Your Name", email = "you@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11,<3.15"
+requires-python = ">=3.12,<3.15"
 dependencies = [
     "pytest >=9.0.2,<10.0.0",
     "scikit-learn >=1.8.0,<2.0.0",
     "pandas >=2.3.3,<3.0.0",
-    "requests >=2.32.5,<3.0.0",   
+    "requests >=2.32.5,<3.0.0",
+    "django (>=6.0,<7.0)",   
+    "djangorestframework >=3.14,<4.0"
 ]
 
 [build-system]
@@ -30,3 +32,6 @@ priority = "explicit"
 sentence-transformers = ">=5.2.0,<6.0.0"
 faiss-cpu = ">=1.13.2,<2.0.0"
 torch = { version = ">=2.2,<3.0", source = "pytorch-cpu" }
+[tool.poetry.group.dev.dependencies]
+debugpy = "^1.8.19"
+
