--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,4 @@ jobs:
       # ignore e2e tests so data isn't hosted on git
       - name: Run tests
         run: |
-          poetry run pytest tests/unit_tests/
+          poetry run pytest
