--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "pandas >=2.3.3,<3.0.0",
     "requests >=2.32.5,<3.0.0",
     "django (>=6.0,<7.0)",   
-    "djangorestframework >=3.14,<4.0"
+    "djangorestframework >=3.14,<4.0",   
+    "supabase (>=2.27.0,<3.0.0)"
 ]
 
 [build-system]
