--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ priority = "explicit"
 sentence-transformers = ">=5.2.0,<6.0.0"
 faiss-cpu = ">=1.13.2,<2.0.0"
 torch = { version = ">=2.2,<3.0", source = "pytorch-cpu" }
+
 [tool.poetry.group.dev.dependencies]
 debugpy = "^1.8.19"
+pytest-django = "^4.5.2"
 
