--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,8 @@
     "ms-python.vscode-pylance",
     "ms-python.black-formatter",
     "ms-python.isort",
-    "ms-python.debugpy"
+    "ms-python.debugpy",
+    "littlefoxteam.vscode-python-test-adapter"
   ],
   "remoteUser": "root"
 }
