--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,3 +21,4 @@ services:
       HF_REPO_ID: ${HF_REPO_ID}
       SUPABASE_URL: ${SUPABASE_URL}
       SUPABASE_KEY: ${SUPABASE_KEY}
+      SUPABASE_TABLE: ${SUPABASE_TABLE}
