--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,7 +8,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      
     expose:
       - 8000
       - 5678
@@ -22,3 +21,10 @@ services:
       SUPABASE_URL: ${SUPABASE_URL}
       SUPABASE_KEY: ${SUPABASE_KEY}
       SUPABASE_TABLE: ${SUPABASE_TABLE}
+    networks:
+      - media-rs-network
+
+networks:
+  media-rs-network:
+    external: true
+    
