--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
         run: docker compose -f docker-compose.ci.yml up -d --remove-orphans
 
       - name: Run tests
-        run: docker compose -f docker-compose.ci.yml run --rm media-rs-backend-ci poetry run pytest
+        run: docker compose -f docker-compose.ci.yml run --rm media-rs-backend-ci poetry run pytest -vv
 
       - name: Tear down CI containers
         if: always()
