--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "requests >=2.32.5,<3.0.0",
     "django (>=6.0,<7.0)",   
     "djangorestframework >=3.14,<4.0",   
-    "supabase (>=2.27.0,<3.0.0)"
+    "supabase (>=2.27.0,<3.0.0)",   
+    "scipy (>=1.16.3,<2.0.0)"
 ]
 
 [build-system]
