--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,27 +11,26 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      DJANGO_SETTINGS_MODULE: api.api_project.settings
       HF_TOKEN: ${{ secrets.HF_TOKEN }}
       HF_REPO_ID: ${{ secrets.HF_REPO_ID }}
       CACHE_FOLDER: ${{ github.workspace }}/hf_cache
+      DJANGO_SETTINGS_MODULE: api.api_project.settings
       DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
       SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
       SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
       SUPABASE_TABLE: ${{ secrets.SUPABASE_TABLE }}
-
-    strategy:
-      matrix:
-        python-version: [3.11]
+      HF_HUB_DISABLE_PROGRESS_BARS: "1"
+      HF_HUB_DISABLE_TELEMETRY: "1"
+      HF_HUB_DISABLE_FILE_LOCKS: "1"
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.11
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
@@ -39,18 +38,27 @@ jobs:
           version: latest
           virtualenvs-in-project: true
 
-      - name: Restore Hugging Face cache
+      - name: Restore HF cache
         uses: actions/cache@v3
         with:
           path: ${{ github.workspace }}/hf_cache
-          key: hf-cache-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+          key: hf-cache-${{ runner.os }}
+          restore-keys: |
+            hf-cache-${{ runner.os }}
 
-      - name: Start CI containers
-        run: docker compose -f docker-compose.ci.yml up -d --remove-orphans
+      - name: Warm up HF cache
+        run: |
+          echo "Downloading Hugging Face models and datasets..."
+          python - <<'EOF'
+          import os
+          from media_rs.utils.movies.movie_data_cache import get_movie_data_cache
+          os.environ["CACHE_FOLDER"] = "${CACHE_FOLDER}"
+          get_movie_data_cache()
+          EOF
 
-      - name: Run tests with cached HF data
-        run: docker compose -f docker-compose.ci.yml run --rm -e CACHE_FOLDER=${{ github.workspace }}/hf_cache media-rs-backend-ci poetry run pytest -vv
-
-      - name: Tear down CI containers
+      - name: Save HF cache
         if: always()
-        run: docker compose -f docker-compose.ci.yml down -v
+        uses: actions/cache@v3
+        with:
+          path: ${{ github.workspace }}/hf_cache
+          key: hf-cache-${{ runner.os }}
