--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "django (>=6.0,<7.0)",   
     "djangorestframework >=3.14,<4.0",   
     "supabase (>=2.27.0,<3.0.0)",   
-    "scipy (>=1.16.3,<2.0.0)"
+    "scipy (>=1.16.3,<2.0.0)",   
+    "numpy (>=2.4.0,<3.0.0)"
 ]
 
 [build-system]
