--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,51 +14,27 @@ jobs:
       HF_TOKEN: ${{ secrets.HF_TOKEN }}
       HF_REPO_ID: ${{ secrets.HF_REPO_ID }}
       CACHE_FOLDER: ${{ github.workspace }}/hf_cache
-      DJANGO_SETTINGS_MODULE: api.api_project.settings
-      DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
-      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-      SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-      SUPABASE_TABLE: ${{ secrets.SUPABASE_TABLE }}
-      HF_HUB_DISABLE_PROGRESS_BARS: "1"
-      HF_HUB_DISABLE_TELEMETRY: "1"
-      HF_HUB_DISABLE_FILE_LOCKS: "1"
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
-
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: latest
-          virtualenvs-in-project: true
-
-      - name: Restore HF cache
+      - name: Restore HF cache (empty first time)
         uses: actions/cache@v3
         with:
           path: ${{ github.workspace }}/hf_cache
-          key: hf-cache-${{ runner.os }}
+          key: hf-cache-global
           restore-keys: |
-            hf-cache-${{ runner.os }}
+            hf-cache-global
 
-      - name: Warm up HF cache
-        run: |
-          echo "Downloading Hugging Face models and datasets..."
-          poetry run python - <<'EOF'
-          import os
-          from media_rs.utils.movies.movie_data_cache import get_movie_data_cache
-          os.environ["CACHE_FOLDER"] = "${CACHE_FOLDER}"
-          get_movie_data_cache()
-          EOF
+      - name: Build Docker container
+        run: docker compose -f docker-compose.ci.yml build media-rs-backend-ci
+
+      - name: Download Hugging Face files
+        run: docker compose -f docker-compose.ci.yml run --rm -e CACHE_FOLDER=${{ github.workspace }}/hf_cache media-rs-backend-ci python -c "from media_rs.utils.movies.movie_data_cache import get_movie_data_cache; get_movie_data_cache()"
 
       - name: Save HF cache
-        if: always()
         uses: actions/cache@v3
         with:
           path: ${{ github.workspace }}/hf_cache
-          key: hf-cache-${{ runner.os }}
+          key: hf-cache-global
