--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "djangorestframework >=3.14,<4.0",   
     "supabase (>=2.27.0,<3.0.0)",   
     "scipy (>=1.16.3,<2.0.0)",   
-    "numpy (>=2.4.0,<3.0.0)"
+    "numpy (>=2.4.0,<3.0.0)",   
+    "dotenv (>=0.9.9,<0.10.0)"
 ]
 
 [build-system]
