added TMDB key to ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
       SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
       SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
       SUPABASE_TABLE: ${{ secrets.SUPABASE_TABLE }}
+      TMDB_KEY: ${{ secrets.TMDB_KEY }}
 
     strategy:
       matrix:
