--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -21,4 +21,5 @@ services:
       SUPABASE_URL: ${SUPABASE_URL}
       SUPABASE_KEY: ${SUPABASE_KEY}
       SUPABASE_TABLE: ${SUPABASE_TABLE}
+      TMDB_KEY: ${TMDB_KEY}
     
