--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: prod
     expose:
       - 8000
-      - 5678
     environment:
       DJANGO_SETTINGS_MODULE: api.api_project.settings
-      PYTHONUNBUFFERED: "1"
-
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
+      DEBUG: "0"
+
       HF_TOKEN: ${HF_TOKEN}
       HF_REPO_ID: ${HF_REPO_ID}
       SUPABASE_URL: ${SUPABASE_URL}
@@ -20,6 +20,7 @@ services:
       SUPABASE_TABLE: ${SUPABASE_TABLE}
       TMDB_KEY: ${TMDB_KEY}
       CACHE_FOLDER: ${CACHE_FOLDER}
+      ALLOWED_HOST: ${ALLOWED_HOSTS_PROD}
 
     networks:
       - media-rs-network
