--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -22,4 +22,5 @@ services:
       SUPABASE_KEY: ${SUPABASE_KEY}
       SUPABASE_TABLE: ${SUPABASE_TABLE}
       TMDB_KEY: ${TMDB_KEY}
+      CACHE_FOLDER: ${CACHE_FOLDER}
     
