--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,12 @@ dependencies = [
     "supabase (>=2.27.0,<3.0.0)",   
     "scipy (>=1.16.3,<2.0.0)",   
     "numpy (>=2.4.0,<3.0.0)",   
-    "dotenv (>=0.9.9,<0.10.0)"
+    "dotenv (>=0.9.9,<0.10.0)",   
+    "gunicorn (>=24.1.1,<25.0.0)",   
+    "django-cors-headers (>=4.9.0,<5.0.0)",   
+    "psycopg[binary] (>=3.3.2,<4.0.0)",   
+    "psycopg2-binary (>=2.9.11,<3.0.0)",   
+    "sentence-transformers (>=5.2.2,<6.0.0)"
 ]
 
 [build-system]
