--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,17 +12,16 @@ dependencies = [
     "scikit-learn >=1.8.0,<2.0.0",
     "pandas >=2.3.3,<3.0.0",
     "requests >=2.32.5,<3.0.0",
-    "django (>=6.0,<7.0)",   
-    "djangorestframework >=3.14,<4.0",   
     "supabase (>=2.27.0,<3.0.0)",   
     "scipy (>=1.16.3,<2.0.0)",   
     "numpy (>=2.4.0,<3.0.0)",   
     "dotenv (>=0.9.9,<0.10.0)",   
     "gunicorn (>=24.1.1,<25.0.0)",   
-    "django-cors-headers (>=4.9.0,<5.0.0)",   
     "psycopg[binary] (>=3.3.2,<4.0.0)",   
     "psycopg2-binary (>=2.9.11,<3.0.0)",   
-    "sentence-transformers (>=5.2.2,<6.0.0)"
+    "sentence-transformers (>=5.2.2,<6.0.0)",   
+    "fastapi (>=0.128.0,<0.129.0)",   
+    "uvicorn (>=0.40.0,<0.41.0)"
 ]
 
 [build-system]
@@ -44,5 +43,4 @@ torch = { version = ">=2.2,<3.0", source = "pytorch-cpu" }
 
 [tool.poetry.group.dev.dependencies]
 debugpy = "^1.8.19"
-pytest-django = "^4.5.2"
-
+httpx = "^0.27"
