--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "numpy (>=2.4.0,<3.0.0)",   
     "dotenv (>=0.9.9,<0.10.0)",   
     "gunicorn (>=24.1.1,<25.0.0)",   
+    "faiss-cpu = ">=1.13.2,<2.0.0"",
     "psycopg[binary] (>=3.3.2,<4.0.0)",   
     "psycopg2-binary (>=2.9.11,<3.0.0)",   
     "sentence-transformers (>=5.2.2,<6.0.0)",   
@@ -37,8 +38,6 @@ url = "https://download.pytorch.org/whl/cpu"
 priority = "explicit"
 
 [tool.poetry.group.training.dependencies]
-sentence-transformers = ">=5.2.0,<6.0.0"
-faiss-cpu = ">=1.13.2,<2.0.0"
 torch = { version = ">=2.2,<3.0", source = "pytorch-cpu" }
 
 [tool.poetry.group.dev.dependencies]
