--- a/requirements.txt
+++ b/requirements.txt
@@ -1,102 +1,70 @@
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.12.1
-asgiref==3.11.0
-cachetools==6.2.4
-certifi==2026.1.4
-cffi==2.0.0
-charset-normalizer==3.4.4
+anyio==4.10.0
+backports.tarfile==1.2.0
+build==1.3.0
+CacheControl==0.14.3
+certifi==2025.8.3
+charset-normalizer==3.4.3
+cleo==2.1.0
 click==8.3.1
 colorama==0.4.6
-cryptography==46.0.3
+contourpy==1.3.0
+crashtest==0.4.1
+cycler==0.12.1
 debugpy==1.8.19
-deprecation==2.1.0
-Django==6.0.1
-django-cors-headers==4.9.0
-djangorestframework==3.16.1
-dotenv==0.9.9
-faiss-cpu==1.13.2
-fastapi==0.128.0
-filelock==3.20.2
-fsspec==2025.12.0
+distlib==0.3.9
+dulwich==0.22.8
+et_xmlfile==2.0.0
+fastjsonschema==2.21.2
+filelock==3.18.0
+findpython==0.6.3
+fonttools==4.54.1
 git-filter-repo==2.47.0
-gunicorn==24.1.1
 h11==0.16.0
-h2==4.3.0
-hf-xet==1.2.0
-hpack==4.1.0
 httpcore==1.0.9
-httpx==0.27.2
-huggingface_hub==1.2.4
-hyperframe==6.1.0
-idna==3.11
-iniconfig==2.3.0
-Jinja2==3.1.6
-joblib==1.5.3
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-mdurl==0.1.2
--e git+https://github.com/mitchellbird5/media-rs-backend.git@4da82a3729b1bae81d2783e437918785c7aa52dc#egg=media_rs
-mmh3==5.2.0
-mpmath==1.3.0
-multidict==6.7.0
-networkx==3.6
-numpy==2.4.0
-packaging==25.0
-pandas==2.3.3
-pluggy==1.6.0
-postgrest==2.27.1
-propcache==0.4.1
-psycopg==3.3.2
-psycopg-binary==3.3.2
-psycopg2-binary==2.9.11
-pycparser==2.23
-pydantic==2.12.5
-pydantic_core==2.41.5
-Pygments==2.19.2
-pyiceberg==0.10.0
-PyJWT==2.10.1
-pyparsing==3.3.1
-pyroaring==1.0.3
-pytest==9.0.2
-pytest-django==4.11.1
+httpx==0.28.1
+idna==3.10
+importlib_metadata==8.7.0
+installer==0.7.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.3.0
+keyring==25.6.0
+kiwisolver==1.4.7
+matplotlib==3.9.2
+more-itertools==10.7.0
+msgpack==1.1.1
+mysql==0.0.3
+mysql-connector-python==9.1.0
+mysqlclient==2.2.4
+numpy==2.1.2
+openpyxl==3.1.5
+packaging==24.1
+pandas==2.2.3
+pbs-installer==2025.8.28
+pillow==11.0.0
+pkginfo==1.12.1.2
+platformdirs==4.3.7
+poetry==2.1.4
+poetry-core==2.1.3
+pyparsing==3.2.0
+pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-pytz==2025.2
-PyYAML==6.0.3
-realtime==2.27.1
-regex==2025.11.3
+pytz==2024.2
+pywin32-ctypes==0.2.3
+RapidFuzz==3.14.0
 requests==2.32.5
-rich==14.2.0
-safetensors==0.7.0
-scikit-learn==1.8.0
-scipy==1.16.3
-sentence-transformers==5.2.2
-setuptools==80.9.0
+requests-toolbelt==1.0.0
+scipy==1.14.1
+seaborn==0.13.2
 shellingham==1.5.4
-six==1.17.0
+six==1.16.0
 sniffio==1.3.1
-sortedcontainers==2.4.0
-sqlparse==0.5.5
-starlette==0.50.0
-storage3==2.27.1
-StrEnum==0.4.15
-strictyaml==1.7.3
-supabase==2.27.1
-supabase-auth==2.27.1
-supabase-functions==2.27.1
-sympy==1.14.0
-tenacity==9.1.2
-threadpoolctl==3.6.0
-tokenizers==0.22.2
-torch==2.9.1+cpu
-tqdm==4.67.1
-transformers==5.0.0rc1
-typer-slim==0.21.1
-typing-inspection==0.4.2
+tomlkit==0.13.3
+trove-classifiers==2025.8.26.11
 typing_extensions==4.15.0
-tzdata==2025.3
-urllib3==2.6.2
+tzdata==2024.2
+urllib3==2.5.0
 uvicorn==0.40.0
-websockets==15.0.1
-yarl==1.22.0
+virtualenv==20.29.3
+zipp==3.23.0
+zstandard==0.24.0
