--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -16,6 +16,7 @@ services:
       HF_REPO_ID: ${HF_REPO_ID}
       SUPABASE_URL: ${SUPABASE_URL}
       SUPABASE_KEY: ${SUPABASE_KEY}
-      SUPABASE_TABLE: ${SUPABASE_TABLE}
+      SUPABASE_MOVIE_TABLE: ${SUPABASE_MOVIE_TABLE}
+      SUPABASE_BOOK_TABLE: ${SUPABASE_BOOK_TABLE}
       TMDB_KEY: ${TMDB_KEY}
       ALLOWED_HOST: ${ALLOWED_HOSTS_DEV}
