--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,7 +17,8 @@ services:
       HF_REPO_ID: ${HF_REPO_ID}
       SUPABASE_URL: ${SUPABASE_URL}
       SUPABASE_KEY: ${SUPABASE_KEY}
-      SUPABASE_TABLE: ${SUPABASE_TABLE}
+      SUPABASE_MOVIE_TABLE: ${SUPABASE_MOVIE_TABLE}
+      SUPABASE_BOOK_TABLE: ${SUPABASE_BOOK_TABLE}
       TMDB_KEY: ${TMDB_KEY}
       CACHE_FOLDER: ${CACHE_FOLDER}
 
